--- a/.github/workflows/jagan.yml
+++ b/.github/workflows/jagan.yml
@@ -1,4 +1,4 @@
-name: Playwright CA Tests
+name: Playwright AU Tests
 
 on:
   push:
@@ -26,7 +26,7 @@ jobs:
       run: npx playwright install --with-deps
       
     - name: Run CA Playwright tests
-      run: npx playwright test tests/CA.spec.ts
+      run: npx playwright test tests/AU.spec.ts
       
     - name: Generate HTML report
       run: npx playwright show-report
